subscription page ui and bugs fixes

--- a/src/app/features/dashboard/bom/bom-copy-materials/bom-copy-materials.component.html
+++ b/src/app/features/dashboard/bom/bom-copy-materials/bom-copy-materials.component.html
@@ -1,6 +1,7 @@
-<div class="page-start-point changeWidth mt-5 pt-4">
+<div class="page-start-point mt-5 pt-4">
     <div class="p-l-20 p-r-20 p-b-20 copy-bom-materials-outer">
-        <card-layout *ngIf="projectData" [projectDetails]="projectData" [disableEditDelete]="true" pageType="2"></card-layout>
+        <card-layout *ngIf="projectData" [projectDetails]="projectData" [disableEditDelete]="true" pageType="2">
+        </card-layout>
 
         <div class="row align-items-center copy-bom-small-screen">
             <div class="col-xs-6 col-md-3 copy-bom-search-input">
