--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -760,3 +760,11 @@ input::title {
   display: flex;
   align-items: center;
 }
+
+.line-through{
+  text-decoration-line: line-through;
+}
+
+.h-30px{
+  height:30px !important;
+}
