--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <!-- <fix-header></fix-header> -->
-<div class="page-start-point changeWidth pt-4">
+<div class="page-start-point pt-4">
   <div *ngIf="!allProjects || (allProjects && allProjects.length == 0)" class="parent p-t-20 min-height">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
       <div class="add-user-img">
@@ -16,7 +16,8 @@
           </p>
         </div>
       </div>
-      <button *ngIf="permissionObj.addProject" mat-raised-button (click)="addProject()" class="main-background-color main-button color-white">
+      <button *ngIf="permissionObj.addProject" mat-raised-button (click)="addProject()"
+        class="main-background-color main-button color-white">
         Add First Project
       </button>
     </div>
@@ -32,15 +33,18 @@
           </button>
         </mat-form-field>
       </div>
-      <div *ngIf="permissionObj.addProject" class="text-right col-xs-5 add-project-btn p-t-10" [ngClass]="isMobile ? 'sm-btn1' : ''">
-        <button mat-raised-button class="main-background-color main-button color-white demo-title" (click)="addProject()">
+      <div *ngIf="permissionObj.addProject" class="text-right col-xs-5 add-project-btn p-t-10"
+        [ngClass]="isMobile ? 'sm-btn1' : ''">
+        <button mat-raised-button class="main-background-color main-button color-white demo-title"
+          (click)="addProject()">
           + Add Project
         </button>
       </div>
     </div>
     <!-- end fix part -->
     <div class="mb-3" *ngFor="let projDetails of allProjects | SearchPipe: searchText:['projectName']">
-      <card-layout (onEdit)="editProject($event)" (onDelete)="deleteProject($event)" [projectDetails]="projDetails"> </card-layout>
+      <card-layout (onEdit)="editProject($event)" (onDelete)="deleteProject($event)" [projectDetails]="projDetails">
+      </card-layout>
     </div>
   </div>
 </div>
