--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -1,14 +1,16 @@
 <!-- <fix-header></fix-header> -->
-<div class="page-start-point changeWidth mt-5 pt-4">
+<div class="page-start-point mt-5 pt-4">
   <div class="dashboard-unique p-b-20 min-height parent">
     <div class="row">
       <div class="col-sm-12 p-l-10 p-r-10">
-        <card-layout *ngIf="product" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="product"></card-layout>
+        <card-layout *ngIf="product" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="product">
+        </card-layout>
       </div>
     </div>
     <div class="row p-t-10 p-b-10">
       <div class="col-sm-12 p-r-10">
-        <button (click)="showIndent()" mat-raised-button [disabled]="!materialForms.valid" class="main-background-color main-button color-white pull-right">
+        <button (click)="showIndent()" mat-raised-button [disabled]="!materialForms.valid"
+          class="main-background-color main-button color-white pull-right">
           Raise PR
         </button>
       </div>
@@ -35,13 +37,15 @@
           <!-- Name Column -->
           <ng-container matColumnDef="Estimated Quantity">
             <th mat-header-cell *matHeaderCellDef class="text-align-center">Estimated Quantity</th>
-            <td mat-cell *matCellDef="let element" class="text-align-center">{{ element.estimatedQty }} {{ element.materialUnit }}</td>
+            <td mat-cell *matCellDef="let element" class="text-align-center">{{ element.estimatedQty }}
+              {{ element.materialUnit }}</td>
           </ng-container>
 
           <!-- Name Column -->
           <ng-container matColumnDef="Requested Quantity">
             <th mat-header-cell *matHeaderCellDef class="text-align-center">Requested Quantity</th>
-            <td mat-cell *matCellDef="let element" class="text-align-center">{{ element.requestedQuantity }} {{ element.materialUnit }}</td>
+            <td mat-cell *matCellDef="let element" class="text-align-center">{{ element.requestedQuantity }}
+              {{ element.materialUnit }}</td>
           </ng-container>
 
           <!-- Weight Column -->
@@ -50,7 +54,8 @@
 
             <td mat-cell *matCellDef="let element; let i = index" class="text-align-center">
               <mat-form-field [formGroupName]="i" class="border-input table-input">
-                <input matInput formControlName="quantity" type="text" appTwoDigitDecimaNumber placeholder="Required Quantity" />
+                <input matInput formControlName="quantity" type="text" appTwoDigitDecimaNumber
+                  placeholder="Required Quantity" />
               </mat-form-field>
               {{ element.materialUnit }}
             </td>
@@ -63,17 +68,9 @@
             <td mat-cell *matCellDef="let element; let i = index">
               <mat-form-field [formGroupName]="i" class="border-input">
                 <!-- <span class="form-placeholder">{{ materialForms.controls.forms.value[i].dueDate | date: "dd-MMM-yyy" }}</span> -->
-                <input
-                  matInput
-                  formControlName="dueDate"
-                  #ref
-                  [matDatepicker]="startDate"
-                  placeholder="Required Date"
-                  (dateChange)="getStart(ref.value, i)"
-                  [min]="startDateOfProject"
-                  (click)="startDate.open()"
-                  readonly
-                />
+                <input matInput formControlName="dueDate" #ref [matDatepicker]="startDate" placeholder="Required Date"
+                  (dateChange)="getStart(ref.value, i)" [min]="startDateOfProject" (click)="startDate.open()"
+                  readonly />
                 <mat-datepicker-toggle matSuffix [for]="startDate"></mat-datepicker-toggle>
                 <mat-datepicker #startDate></mat-datepicker>
               </mat-form-field>
