--- a/src/app/features/my-material/my-material.component.html
+++ b/src/app/features/my-material/my-material.component.html
@@ -1,6 +1,6 @@
-<div class="page-start-point changeWidth pt-4">
+<div class="page-start-point pt-4">
   <div *ngIf="!selectedCategory.length; else elseBlock" class="parent p-t-20 min-height">
-    <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
+    <div class="p-l-10 p-b-20 min-height parent wrapper-btn-center">
       <div class="add-user-img">
         <img src="../../../../assets/images/addMyMatrial.svg" alt="Project Logo" />
         <div>
@@ -10,13 +10,14 @@
           </p>
         </div>
         <div>
-          <button mat-raised-button class="main-background-color main-button color-white" (click)="openAddMaterial()">+Add Material</button>
+          <button mat-raised-button class="main-background-color main-button color-white"
+            (click)="openAddMaterial()">+Add Material</button>
         </div>
       </div>
     </div>
   </div>
   <ng-template #elseBlock>
-    <div class="p-l-20 p-r-20 p-b-20 min-height">
+    <div class="p-l-10 p-b-20 min-height">
       <div class="p-t-20">
         <mat-tab-group (selectedTabChange)="tabClick($event)">
           <mat-tab label="My Materials">
