--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point changeWidth mt-5 pt-4">
+<div class="page-start-point mt-5 pt-4">
   <div class="p-b-20 grn-dashboard min-height parent">
     <div class="row align-items-center py-3">
       <!-- <div class="col-xs-6">PO Number: {{grnHeaders[0].poNumber}}</div> -->
@@ -34,7 +34,8 @@
                     {{ grnHeader.grnDate | date: "dd-MMM-yyy" }}
                   </div>
                   <div class="col-xs-4 col-md-4 col-lg-4 display-flex justify-content-flex-end p-0"
-                    (click)="openDocuments(grnHeader.documentList);mep.expanded = false" [class.inactive-receipt-docs]="!grnHeader.documentList">
+                    (click)="openDocuments(grnHeader.documentList);mep.expanded = false"
+                    [class.inactive-receipt-docs]="!grnHeader.documentList">
                     <img class="file-icon" src="../../../../assets/images/file-doc.png" />
                     <!-- <span class="font-size-vary-grn main-color text-decoration-underline">Documents</span> -->
                   </div>
