--- a/src/app/features/rfq/rfq-view/rfq-view.component.html
+++ b/src/app/features/rfq/rfq-view/rfq-view.component.html
@@ -1,6 +1,6 @@
 <!-- <fix-header></fix-header> -->
 
-<div class="page-start-point changeWidth mt-5 pt-4" *ngIf="rfqDetails">
+<div class="page-start-point mt-5 pt-4" *ngIf="rfqDetails">
   <div class="create-po-dashboard p-b-20 min-height parent">
     <div class="row m-b-10">
       <div class="col-md-12">
@@ -16,26 +16,26 @@
             <label class="text-bold" [ngClass]="isMobile ? 'd-block mb-1' : ''">RFP End Date: </label>
             {{ rfqDetails.dueDate | date: "dd-MMM-yyy" }}
           </div>
-          <div
-            class="col-xs-12 p-l-0 p-t-10 p-b-25 text-right"
-            [ngClass]="isMobile ? 'mt-2' : ''"
-            *ngIf="rfqDetails.rfqCurrency != null && rfqDetails.rfqCurrency.exchangeCurrencyName != null"
-          >
+          <div class="col-xs-12 p-l-0 p-t-10 p-b-25 text-right" [ngClass]="isMobile ? 'mt-2' : ''"
+            *ngIf="rfqDetails.rfqCurrency != null && rfqDetails.rfqCurrency.exchangeCurrencyName != null">
             <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
               <span class="font-size-vary-grn color-grey">
-                <img width="25px" *ngIf="rfqDetails.rfqCurrency.exchangeCurrencyFlag" [src]="rfqDetails.rfqCurrency.exchangeCurrencyFlag" />
+                <img width="25px" *ngIf="rfqDetails.rfqCurrency.exchangeCurrencyFlag"
+                  [src]="rfqDetails.rfqCurrency.exchangeCurrencyFlag" />
                 {{ rfqDetails.rfqCurrency.exchangeCurrencyName }}
               </span>
               <span class="p-l-5"> = </span>
               <span class="p-l-5 color-6d6a6a color-grey"> {{ rfqDetails.rfqCurrency.exchangeValue }} </span>
               <span class="p-l-5 color-grey">
-                <img width="25px" *ngIf="rfqDetails.rfqCurrency.primaryCurrencyFlag" [src]="rfqDetails.rfqCurrency.primaryCurrencyFlag" />
+                <img width="25px" *ngIf="rfqDetails.rfqCurrency.primaryCurrencyFlag"
+                  [src]="rfqDetails.rfqCurrency.primaryCurrencyFlag" />
                 {{ rfqDetails.rfqCurrency.primaryCurrencyName }}
               </span>
             </span>
             <div class="display-inline-block p-l-5">
-              <span *ngIf="rfqDetails.rfqCurrency != null && rfqDetails.rfqCurrency.exchangeCurrencyName != null" class="p-l-5 info-icon info-tootip"
-                ><img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
+              <span *ngIf="rfqDetails.rfqCurrency != null && rfqDetails.rfqCurrency.exchangeCurrencyName != null"
+                class="p-l-5 info-icon info-tootip"><img src="./../../../../assets/images/i_icon.png"
+                  class="img-responsive" />
                 <span class="info-tootip__content rt-0">
                   <div class="tooltip-table ml-0" [ngClass]="isMobile ? 'mr-2 p-10 font-size14' : ''">
                     <div class="row text-center color-grey text-semi-bold p-l-5 p-r-5">
@@ -57,7 +57,8 @@
 
         <!-- second row -->
         <div class="row m-b-10">
-          <div class="supplier-list-rfq-view col-md-3 main-flex" *ngFor="let supplier of rfqDetails.supplierDetails; let i = index">
+          <div class="supplier-list-rfq-view col-md-3 main-flex"
+            *ngFor="let supplier of rfqDetails.supplierDetails; let i = index">
             <mat-card class="w-100">
               <div class="col-md-12 text-bold supplier-company">
                 <label for="company " class="word-break-all">{{ supplier.supplier_name }}</label>
@@ -71,7 +72,8 @@
                 <label for="email" class="word-break-all">{{ supplier.email }}</label>
               </div>
               <div class="col-md-12">
-                <label for="phoneNumber" class="word-break-all"> {{ supplier.countryCallingCode }}-{{ supplier.contact_no }} </label>
+                <label for="phoneNumber" class="word-break-all">
+                  {{ supplier.countryCallingCode }}-{{ supplier.contact_no }} </label>
               </div>
             </mat-card>
           </div>
@@ -79,8 +81,7 @@
       </div>
     </div>
 
-    <mat-card class="m-b-10 p-b-10" *ngIf="this.rfqDetails.terms"
-      >Payment Terms:
+    <mat-card class="m-b-10 p-b-10" *ngIf="this.rfqDetails.terms">Payment Terms:
       <span classs="p-l-15">
         {{ this.rfqDetails.terms.termsDesc.trim() === "Others" ? this.rfqDetails.terms.otherDesc : this.rfqDetails.terms.termsDesc }}
       </span>
@@ -149,15 +150,18 @@
                 </th>
 
                 <td class="text-align-center rfq-view-image-lists" mat-cell *matCellDef="let element">
-                  <div *ngIf="element?.documentList?.length" class="images-lists" (click)="viewAllImages(element.materialId)"
+                  <div *ngIf="element?.documentList?.length" class="images-lists"
+                    (click)="viewAllImages(element.materialId)"
                     [ngClass]="element?.documentList?.length === 1 ? 'single-image' : element?.documentList?.length === 2 ? 'double-images' : 'triple-images'">
                     <ng-container *ngFor="let img of element.documentList; let i = index">
-                      <img [src]="img.documentThumbnailUrl" alt="project{{ i }}" class="img-fluid attached-image" *ngIf="i < 3" />
+                      <img [src]="img.documentThumbnailUrl" alt="project{{ i }}" class="img-fluid attached-image"
+                        *ngIf="i < 3" />
                     </ng-container>
                   </div>
 
                   <ng-container *ngIf="!element?.documentList">
-                    <img src="assets/images/project-default-image.png" alt="default-material" class="img-fluid default-image" />
+                    <img src="assets/images/project-default-image.png" alt="default-material"
+                      class="img-fluid default-image" />
                   </ng-container>
                 </td>
               </ng-container>
