--- a/src/app/features/supplier/supplier-details/supplier-details.component.html
+++ b/src/app/features/supplier/supplier-details/supplier-details.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point changeWidth pt-4">
+<div class="page-start-point pt-4">
   <ng-container *ngIf="dataSourceTemp == null || dataSourceTemp == [] || dataSourceTemp.length == 0">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent wrapper-btn-center">
       <div class="add-user-img suppliers">
@@ -21,23 +21,15 @@
           <div class="mr-3 p-t-10">
             <span class="cursor-pointer">
               <img src="assets/images/download-bom.svg" alt="download" class="img-fluid mr-2 cursor-pointer w-45" />
-              <a class="cursor-pointer" (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"> Download Supplier Template</a></span
-            >
+              <a class="cursor-pointer" (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"> Download
+                Supplier Template</a></span>
           </div>
           <div class="mr-3 p-t-10 cursor-pointer">
-            <input
-              type="file"
-              accept=".xlsx"
-              #fileDropRef
-              id="fileDropRef"
-              class="fileupload cursor-pointer"
-              style="display: none;"
-              multiple
-              (change)="uploadExcel($event.target.files)"
-            />
+            <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload cursor-pointer"
+              style="display: none;" multiple (change)="uploadExcel($event.target.files)" />
             <label for="fileDropRef" class="cursor-pointer upload-template" style="color: #000015e6;">
-              <img src="assets/images/upload-bom.svg" alt="upload" class="img-fluid mr-2 w-45 cursor-pointer" /> Upload Supplier Template</label
-            >
+              <img src="assets/images/upload-bom.svg" alt="upload" class="img-fluid mr-2 w-45 cursor-pointer" /> Upload
+              Supplier Template</label>
           </div>
         </div>
       </div>
@@ -62,51 +54,39 @@
           </mat-form-field>
         </div>
         <div class="col-sm-8 col-md-9 column-2">
-          <div [ngClass]="showResponsiveDesignIcons ? 'text-right add-user-details-button-right p-t-10' : 'text-right add-user-details-button-right p-t-10 p-r-20'">
+          <div
+            [ngClass]="showResponsiveDesignIcons ? 'text-right add-user-details-button-right p-t-10' : 'text-right add-user-details-button-right p-t-10 p-r-20'">
             <div class="text-right d-flex justify-content-end" appDnd>
               <div class="mr-3 cursor-pointer">
                 <span class="cursor-pointer">
-                  <img
-                    *ngIf="!showResponsiveDesignIcons"
-                    src="assets/images/download-bom.svg"
-                    alt="download"
+                  <img *ngIf="!showResponsiveDesignIcons" src="assets/images/download-bom.svg" alt="download"
                     class="img-fluid mr-2 cursor-pointer w-45"
-                    (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"
-                  />
-                  <img
-                    *ngIf="showResponsiveDesignIcons"
-                    src="assets/images/excel-download-res.svg"
-                    alt="download"
+                    (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')" />
+                  <img *ngIf="showResponsiveDesignIcons" src="assets/images/excel-download-res.svg" alt="download"
                     class="img-fluid mr-2 cursor-pointer"
-                    (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')"
-                  />
+                    (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')" />
 
-                  <a class="cursor-pointer" *ngIf="!showResponsiveDesignIcons" (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')">
+                  <a class="cursor-pointer" *ngIf="!showResponsiveDesignIcons"
+                    (click)="downloadExcel('assets/images/Supplier_Upload_Template.xlsx')">
                     Download Supplier Template
-                  </a></span
-                >
+                  </a></span>
               </div>
               <div class="mr-3 cursor-pointer">
-                <input
-                  type="file"
-                  accept=".xlsx"
-                  #fileDropRef
-                  id="fileDropRef"
-                  class="fileupload cursor-pointer"
-                  style="display: none;"
-                  multiple
-                  (change)="uploadExcel($event.target.files)"
-                />
+                <input type="file" accept=".xlsx" #fileDropRef id="fileDropRef" class="fileupload cursor-pointer"
+                  style="display: none;" multiple (change)="uploadExcel($event.target.files)" />
                 <label for="fileDropRef" class="cursor-pointer upload-template">
-                  <img *ngIf="!showResponsiveDesignIcons" src="assets/images/upload-bom.svg" alt="upload" class="img-fluid mr-2 w-45 cursor-pointer" />
-                  <img *ngIf="showResponsiveDesignIcons" src="assets/images/upload-res.svg" alt="upload" class="img-fluid mr-2 w-30 cursor-pointer" />
+                  <img *ngIf="!showResponsiveDesignIcons" src="assets/images/upload-bom.svg" alt="upload"
+                    class="img-fluid mr-2 w-45 cursor-pointer" />
+                  <img *ngIf="showResponsiveDesignIcons" src="assets/images/upload-res.svg" alt="upload"
+                    class="img-fluid mr-2 w-30 cursor-pointer" />
                   <a *ngIf="!showResponsiveDesignIcons" style="color: #222222;">
                     Upload Supplier Template
                   </a>
                 </label>
               </div>
               <div [ngClass]="isMobile ? 'sm-btn1' : ''">
-                <button mat-raised-button (click)="addSupplier()" class="main-background-color main-button color-white add-supplier-button">
+                <button mat-raised-button (click)="addSupplier()"
+                  class="main-background-color main-button color-white add-supplier-button">
                   Add Supplier
                 </button>
               </div>
@@ -118,7 +98,8 @@
       <!-- first table structure -->
       <!-- <div class="col-sm-12"> -->
       <!-- table structure -->
-      <div class="supplier-details-table-div add-unique-container mat-elevation-z8" *ngIf="dataSourceTemp && dataSourceTemp.length > 0">
+      <div class="supplier-details-table-div add-unique-container mat-elevation-z8"
+        *ngIf="dataSourceTemp && dataSourceTemp.length > 0">
         <table mat-table [dataSource]="dataSource">
           <!--- Note that these columns can be defined in any order.
                     The actual rendered columns are set as a property on the row definition" -->
