--- a/src/app/shared/header/top-header/top-header.component.html
+++ b/src/app/shared/header/top-header/top-header.component.html
@@ -57,8 +57,8 @@
 <ng-container *ngIf="isFreeTrialActivate && isFreeTrial !== null && accountOwner === 1">
   <ng-container *ngIf="isFreeTrial && isFreeTrial.planName && isFreeTrial.daysLeft">
     <div class="trial-block" [ngClass]="isMobile ? 'font-size10' : '' ">
-      <span class="mr-1">Your Free Trial of {{ isFreeTrial.planName }} Plan Expire Soon {{ isFreeTrial.daysLeft }} Days
-        Left</span>
+      <span class="mr-1">Your free trial of {{ isFreeTrial.planName }} plan ends in {{ isFreeTrial.daysLeft }}
+        days</span>
       <button mat-button class="brand-bg-color color-white" [ngClass]="isMobile ? 'font-size10 mt-1' : 'ml-2' "
         (click)="choosePlan()">Choose
         Plan</button>
