--- a/src/app/features/global-store/material-wise/material-wise.component.html
+++ b/src/app/features/global-store/material-wise/material-wise.component.html
@@ -61,7 +61,7 @@
         <span class="mat-cell maxwidth-20 text-center">
           <div class="row">
             <div class="col-xs-6 text-right p-r-0">
-              <span class="p-r-5">{{ material.GlobalMaterial.poAvailableQty != null ? material.GlobalMaterial.poAvailableQty : 0 }}</span>
+              <span class="p-r-5">{{ material.GlobalMaterial.issuedQty != null ? material.GlobalMaterial.issuedQty : 0 }}</span>
             </div>
             <div class="col-xs-6 text-left p-l-0">
               <span>{{ material.GlobalMaterial.materialUnit }}</span>
@@ -74,7 +74,7 @@
               <span class="p-r-5">
                 {{
                   material.GlobalMaterial.deliveredQty != null
-                    ? material.GlobalMaterial.deliveredQty - (material.GlobalMaterial.poAvailableQty ? material.GlobalMaterial.poAvailableQty : 0)
+                    ? material.GlobalMaterial.deliveredQty - (material.GlobalMaterial.issuedQty ? material.GlobalMaterial.issuedQty : 0)
                     : 0
                 }}</span
               >
