--- a/src/app/shared/dialogs/release-notes/release-notes.component.html
+++ b/src/app/shared/dialogs/release-notes/release-notes.component.html
@@ -1,30 +1,58 @@
- <div class="header-add-edit-dialog">
-      <h1 mat-dialog-title>{{notes.headerText}}</h1>
-      <button type="button" class="close" (click)="close()" aria-label="Close">
-        <span aria-hidden="true">×</span>
-      </button>
+<div class="header-add-edit-dialog relnote-head">
+  <h1 mat-dialog-title>{{notes.headerText}}</h1>
+  <button type="button" class="close" (click)="close()" aria-label="Close">
+    <!-- <span aria-hidden="true">×</span> -->
+    <mat-icon class="font-size-26px">close</mat-icon>
+  </button>
+</div>
+<div class="row release-notes">
+  <p *ngIf="notes.subhead" class="font-weight500 mb-1">{{notes.subhead}}</p>
+  <div class="notes-description">
+    {{notes.description}}
   </div>
-   <div class="row release-notes ">
-     <div class="notes-description">
-       {{notes.description}}
-     </div>
-     <ng-container *ngFor="let note of notes.releaseList">
-       <div class="col-sm-12 heading-div">
-         <span class="heading">
-         {{note.releaseHead}}
-         </span>
-       </div>
-       <div class="col-sm-12 list-of-notes">
-         <ol>
-           <li *ngFor="let item of note.items">
-             {{item.description}}
-           </li>
-         </ol>
-       </div>
-        <!-- <div class="col-sm-12 display-flex justify-content-center">
-          <button mat-raised-button (click)="addProject()" class="main-background-color main-button color-white">
-            Download Release Note
-          </button>
-        </div> -->
-       </ng-container>
-   </div>
+  <ng-container *ngFor="let note of notes.releaseList">
+
+    <ng-container *ngIf="note.releaseFixes">
+      <div class="col-sm-12 heading-div">
+        <span class="heading">
+          <div class="text-wh">
+            {{note.releaseFixes}}
+          </div>
+        </span>
+      </div>
+      <div class="col-sm-12 list-of-notes mt-3">
+        <ol>
+          <li *ngFor="let item of note.items">
+            {{item.description}}
+          </li>
+        </ol>
+      </div>
+    </ng-container>
+
+    <ng-container *ngIf="note.releaseEnhancement">
+      <div class="col-sm-12 heading-div">
+        <span class="heading">
+          <div class="text-wh">
+            {{note.releaseEnhancement}}
+          </div>
+        </span>
+      </div>
+      <div class="col-sm-12 list-of-notes mt-3">
+        <ol>
+          <li *ngFor="let item of note.items">
+            {{item.description}}
+          </li>
+        </ol>
+      </div>
+    </ng-container>
+  </ng-container>
+
+  <ng-container *ngIf="notes.isDownload === 1">
+    <div class="col-sm-12 display-flex justify-content-center">
+      <button mat-raised-button (click)="openDownloadLink(notes.downloadLink)"
+        class="main-background-color main-button color-white">
+        Download Release Note
+      </button>
+    </div>
+  </ng-container>
+</div>
