--- a/src/app/shared/dialogs/select-project/select-project.component.html
+++ b/src/app/shared/dialogs/select-project/select-project.component.html
@@ -3,22 +3,23 @@
     <div class="select-project__title d-flex justify-content-between align-items-center">
       <h1 mat-dialog-title class="mb-0">Project List</h1>
       <button type="button" class="close" (click)="closeDialog()" aria-label="Close">
-        <span aria-hidden="true">×</span>
+        <!-- <span aria-hidden="true">×</span> -->
+        <mat-icon class="font-size-26px">close</mat-icon>
       </button>
     </div>
     <div mat-dialog-content>
       <div class="select-project__lists">
         <mat-radio-group aria-label="Select an option">
           <mat-radio-button [value]="project.projectId" *ngFor="let project of data" (change)="radioChange($event)">
-            <div class="select-project__detail d-flex align-items-center">
-              <p class="mb-0 select-project__name">{{ project.projectName }}</p>
-              <p class="mb-0 select-project__location d-flex align-items-center">
+            <div class="select-project__detail">
+              <!-- <p class="mb-0 select-project__name">{{ project.projectName }}</p> -->
+              <p class="mb-0 select-project__location gray-clr">
                 <!-- <i class="material-icons mr-2">location_on</i> -->
-                <img src="assets/images/location-icon.png" class="img-fluid mr-2" alt="Location Icon" />
-                <span
-                  >{{ project.addressLine1 }}
-                  <span *ngIf="project.addressLine2">,{{ project.addressLine2 }}</span>
-                  ,{{ project.city }},{{ project.country }},{{ project.state }},{{ project.pinCode }}
+                <!-- <img src="assets/images/location-icon.png" class="img-fluid mr-2" alt="Location Icon" /> -->
+                <strong class="d-flex font-weight500">{{ project.projectName }}</strong>
+                <span class="font-size14">{{ project.addressLine1 }}
+                  <span *ngIf="project.addressLine2">, {{ project.addressLine2 }}</span>
+                  , {{ project.city }}, {{ project.country }}, {{ project.state }}, {{ project.pinCode }}
                 </span>
               </p>
             </div>
@@ -39,7 +40,8 @@
           <img src="assets/images/project-background.png" alt="No projects available" class="img-fluid" />
           <h5 class="mt-4">You haven't added any project yet.</h5>
           <h5 class="mb-3">Please add one to continue.</h5>
-          <button (click)="addProject()" mat-raised-button class="main-background-color main-button color-white">Add First Project</button>
+          <button (click)="addProject()" mat-raised-button class="main-background-color main-button color-white">Add
+            First Project</button>
         </div>
       </div>
     </div>
