--- a/src/assets/scss/pages/select-project.scss
+++ b/src/assets/scss/pages/select-project.scss
@@ -1,18 +1,22 @@
 .select-project{
     &__title {
-        margin: 10px 0 0;
-        border-bottom: 1px solid #DFDFDF;
-        padding-bottom: 10px;
+        margin: 10px -20px 0;
+        border-bottom: 1px solid #414141;
+        padding: 0 20px 5px;
     }
 
     .mat-dialog-title{
-        font-size: 16px;
+        font-size: 20px;
     }
 
     .mat-radio-button {
         width: 100%;
         border-bottom: 1px solid #DFDFDF;
         padding: 10px 0;
+    }
+
+    .mat-radio-container{
+        margin-top: -24px;
     }
 
     .mat-radio-label{
@@ -52,4 +56,8 @@
 
 .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle{
     border-color: #F47720;
+}
+
+.gray-clr{
+color:#828282;
 }
