tasks and bugs fixes

--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -203,8 +203,8 @@
                                 [ngClass]="isMobile ? 'w-100' : 'width-94'">
                                 <mat-label>Status Filter</mat-label>
                                 <mat-select formControlName="rfpFilter">
-                                  <mat-option value="Rasied RFP">Rasied RFP</mat-option>
-                                  <mat-option value="Bided RFP">Bided RFP</mat-option>
+                                  <mat-option value="Rasied RFP">Raised RFPs</mat-option>
+                                  <mat-option value="Bided RFP">Bid Received</mat-option>
                                 </mat-select>
                               </mat-form-field>
                             </div>
