--- a/src/app/features/dashboard/bom/bom-topMaterial/bom-topMaterial.component.html
+++ b/src/app/features/dashboard/bom/bom-topMaterial/bom-topMaterial.component.html
@@ -26,10 +26,11 @@
                     </th>
                   </tr>
 
-                  <ng-container formArrayName="materialGroup">
-                    <tr class="mat-row bom-materials-row"
-                      *ngFor="let subcategory of category.materialList; let sc = index" [formGroupName]="sc">
-                      <ng-container class="" *ngIf="!subcategory.isNull">
+                  <ng-container formArrayName="materialGroup"
+                    *ngFor="let subcategory of category.materialList; let sc = index">
+                    <ng-container *ngIf="!subcategory.isNull">
+                      <tr class="mat-row bom-materials-row" [formGroupName]="sc">
+
                         <td class="mat-cell material-category">{{ subcategory.materialName }}</td>
 
                         <td class="mat-cell bom-selected-trades">
@@ -106,10 +107,8 @@
                             </div>
                           </div>
                         </ng-container>
-
-                      </ng-container>
-
-                    </tr>
+                      </tr>
+                    </ng-container>
                   </ng-container>
                 </table>
 
