--- a/src/assets/scss/pages/dialog-styles.scss
+++ b/src/assets/scss/pages/dialog-styles.scss
@@ -66,7 +66,7 @@
 
 .relnote-head{
     background-color: #fbfbfb;
-    border-bottom: 0px !important;
+    border-bottom: 1px solid #414141;
     border-radius: 10px 10px 0px 0px;
     margin: -5px -24px 15px !important;
     padding: 10px 22px !important;
